宝石克隆数量不为1导致宝石增多,排除构建追踪

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ logs
 **/assets/assetstoretools
 /Assets/Plugins/PlasticSCM*
 /assets/plugins/PlasticSCM*
+/Bundles/StandaloneWindows64/DefaultPackage/
+/Assets/StreamingAssets/yoo/DefaultPackage/
 *.private
 *.private.meta
 ^*.private.[0-9]+$
