添加一个方法选择热更资源文件夹上传到服务器并跳过相同的文件仅仅上传没有的 （不包括版本文件)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ logs
 /Assets/Plugins/PlasticSCM*
 /assets/plugins/PlasticSCM*
 /Bundles/StandaloneWindows64/DefaultPackage/
+/Bundles/Android/DefaultPackage/
 /HybridCLRData/
 /yoo/
 /Assets/StreamingAssets/yoo/DefaultPackage/
