--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,9 @@
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
     "com.gustavopsantos.unitymainthreaddispatcher": "https://github.com/gustavopsantos/unitymainthreaddispatcher.git?path=/Assets/UnityMainThreadDispatcher/#1.0.0",
     "com.tuyoogame.yooasset": "2.2.4-preview",
+    "com.unity.adaptiveperformance.samsung.android": "4.0.2",
     "com.unity.collab-proxy": "2.5.1",
+    "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.mobile": "1.0.0",
     "com.unity.ide.rider": "3.0.31",
