--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ MemoryCaptures
 memorycaptures
 Logs
 logs
+/Assets/AssetPackage/Animator/pngs
 **/Assets/AssetStoreTools
 **/assets/assetstoretools
 /Assets/Plugins/PlasticSCM*
